alignment fix

--- a/ui/sass/screen.sass
+++ b/ui/sass/screen.sass
@@ -226,27 +226,27 @@ footer[role="contentinfo"]
     +leader
   
   .meta
-    +columns(11,24)
+    +columns(12,24)
     label
-      +columns(2,11)
+      +columns(2,12)
     input, select
-      +columns(9,11)
-      +omega(11)
+      +columns(10,12)
+      +omega(12)
   
   .env
-    +columns(13,24)
+    +columns(12,24)
     +omega(24)
     ul
       +no-style-list
     select
-      +columns(6,13)
+      +columns(5,12)
       + select
-        +columns(6,13)
+        +columns(6,12)
     .remove
-      +columns(1,13)
-      +omega(13)
+      +columns(1,12)
+      +omega(12)
     .add
-      margin-right: columns(1,13) + gutter(13)
+      margin-right: columns(1,12) + gutter(12)
   
   .steps
     +full(24)
